--- a/xen-arch.tex
+++ b/xen-arch.tex
@@ -158,7 +158,7 @@ Oracle Asia Research and Development Centers (Beijing) \\ % Your institution for
 \begin{frame}
 \frametitle{x86 is NOT virtualizable}
 \begin{itemize}
-\item Virtualizable Architecture: all \textbf{sensitive instructions} must also be \textbf{privileged instructions} (by Gerald J.Popek and Rebert P)
+\item Virtualizable Architecture: all \textbf{sensitive instructions} must also be \textbf{privileged instructions} (by Gerald J.Popek and Rebert P. Goldberg)
 \item \textbf{\textcolor{red}{critical instructions}} = $sensitive \ instructions - privileged \ instructions$ \pause
 \item 18 critical instructions on x86 (Analysis of the Intel Pentium's Ability to Support a Secure Virtual Machine Monitor. USENIX Security 2000):
 	\begin{itemize}
